addons/prometheus-operator/monitoring-stack/resources/node-exporter/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-node-exporter-monitoring
  namespace: PROMETHEUS_OPERATOR_NAMESPACE
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels: {}
    ports:
    - port: 0
      protocol: TCP
